# ai-ratemyprofessor

./: README.md
ai-rmp-api/: pyproject.toml
ai-rmp-api/ai_rmp_api/: handler.py  main.py  rmp_functions.py  tools.py
frontend/app/: page.tsx
