[tool.poetry]
name = "ai-rmp-api"
version = "0.1.0"
description = ""
authors = ["knhn1004 <49494541+knhn1004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
RateMyProfessorAPI = "^1.3.6"
uvicorn = "^0.30.6"
langchain = "^0.2.14"
langchain-groq = "^0.1.9"
python-dotenv = "^1.0.1"
groq = "^0.9.0"

langchain-community = "^0.2.12"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "ai_rmp_api.main:start"
